# smolrtsp-libevent

./: .clang-format  CHANGELOG.md  CMakeLists.txt
include/: smolrtsp-libevent.h
include/smolrtsp-libevent/: bufferevent.h  dispatcher.h  evbuffer.h
src/: bufferevent.c  dispatcher.c  evbuffer.c
